# HeightMap

./: .gitignore  CMakeLists.txt  TODO
ge/: CMakeLists.txt  ge_shared.h  guielements
ge/dialogs/: contouringoptionsdialog.cpp  contouringoptionsdialog.h  extrapolationoptionsdialog.cpp  extrapolationoptionsdialog.h  generatingoptionsdialog.cpp  generatingoptionsdialog.h  terrainoptionsdialog.cpp  terrainoptionsdialog.h
ge/widgets/: abstractextrapolationwidget.cpp  abstractextrapolationwidget.h  contouringoptionswidget.cpp  contouringoptionswidget.h  extrapolationoptionswidget.h  landscapeoptionswidget.cpp  landscapeoptionswidget.h  peakoptionswidget.cpp  peakoptionswidget.h
gui/: CMakeLists.txt  commands  engraver.cpp  engraver.h  heightmapapplication.cpp  heightmapapplication.h  heightmaplogic.cpp  heightmaplogic.h  heightmapsettingsdialog.cpp  heightmapsettingsdialog.h  heightmapviewmode.h  heightmapwindow.cpp  heightmapwindow.h  main.cpp  mappingdata.h  mappingthread.cpp  mappingthread.h  mappingworker.cpp  mappingworker.h  preferences.cpp  preferences.h  preferencescontroller.cpp  preferencescontroller.h  trigger.cpp  trigger.h
gui/auxiliary/: colormap.h  mappingdata.h
gui/cmd/: contouringcommand.cpp  contouringcommand.h  extrapolatecommand.cpp  generatecommand.cpp  generatecommand.h
gui/commands/: commands  contouringcommand.cpp  contouringcommand.h  extrapolatecommand.cpp  extrapolatecommand.h  generatecommand.cpp  generatecommand.h
gui/dialogs/: contouringoptionsdialog.cpp  contouringoptionsdialog.h  extrapolationoptionsdialog.cpp  extrapolationoptionsdialog.h  generatingoptionsdialog.cpp  generatingoptionsdialog.h  terrainoptionsdialog.cpp  terrainoptionsdialog.h
gui/extrapolation/: baselevelextrapolationfactory.cpp  baselevelextrapolationfactory.h  extrapolationdata.cpp  extrapolationdata.h  extrapolationfactory.cpp  extrapolationfactory.h  fixedradiusextrapolationfactory.cpp  fixedradiusextrapolationfactory.h  simpleextrapolationfactory.cpp  simpleextrapolationfactory.h  slopeextrapolationfactory.cpp  slopeextrapolationfactory.h  xreader.cpp  xreader.h  xwriter.cpp  xwriter.h
gui/widgets/: abstractextrapolationwidget.h  baselevelextrapolationwidget.cpp  baselevelextrapolationwidget.h  contouringoptionswidget.cpp  contouringoptionswidget.h  extrapolationoptionswidget.cpp  extrapolationoptionswidget.h  fixedradiusextrapolationwidget.cpp  fixedradiusextrapolationwidget.h  landscapeoptionswidget.cpp  landscapeoptionswidget.h  peakoptionswidget.cpp  peakoptionswidget.h  simpleextrapolationwidget.cpp  simpleextrapolationwidget.h  slopeextrapolationwidget.cpp  slopeextrapolationwidget.h
hm/: CMakeLists.txt  event.h  extrapolator.cpp  extrapolator.h  hm_shared.h  hmdef.h  landscape.cpp  landscape.h  line2dsegment.h  mapper.cpp  mapper.h  peakgenerationoptions.h  peakinfo.h  terrain.cpp  terrain.h
hm/internal/: contouring.h
io/: CMakeLists.txt  heightmapbinaryiohandler.cpp  heightmapbinaryiohandler.h  heightmapiohandler.cpp  heightmapiohandler.h  io_shared.h  iohandlers  landscapetextiohandler.cpp  landscapetextiohandler.h  peakstextiohandler.cpp  peakstextiohandler.h
xbase/: CMakeLists.txt  extrapolationdata.cpp  extrapolationdata.h  extrapolationfactory.h  preferences.cpp  preferences.h  preferencescontroller.h  xbase_shared.h  xreader.cpp  xreader.h  xwriter.cpp  xwriter.h
xplg/: CMakeLists.txt
xplg/bsl/: CMakeLists.txt  baselevelextrapolationfactory.cpp  baselevelextrapolationfactory.h  baselevelextrapolationwidget.cpp  baselevelextrapolationwidget.h  baselevelextrapolator.cpp  baselevelextrapolator.h  bsl.json
xplg/fxr/: CMakeLists.txt  fixedradiusextrapolationfactory.cpp  fixedradiusextrapolationfactory.h  fixedradiusextrapolationwidget.cpp  fixedradiusextrapolationwidget.h  fixedradiusextrapolator.cpp  fixedradiusextrapolator.h  fxr.json
xplg/slp/: CMakeLists.txt  slopeextrapolationfactory.cpp  slopeextrapolationfactory.h  slopeextrapolationwidget.cpp  slopeextrapolationwidget.h  slopeextrapolator.cpp  slopeextrapolator.h  slp.json
xplg/sml/: CMakeLists.txt  simpleextrapolationfactory.cpp  simpleextrapolationfactory.h  simpleextrapolationwidget.cpp  simpleextrapolationwidget.h  simpleextrapolator.cpp  simpleextrapolator.h  sml.json
